# alexandra_ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
src/aiai/: __init__.py  demo.py
src/alexandra_ai/: __init__.py
tests/: test_subpackages.py
